# fifthgnu_stable

./: .gitattributes  README.md  git-v1.sh  setup-git-v1.sh
.github/workflows/: jekyll-gh-pages.yml
Repo Programs/: .BUILDINFO  .PKGINFO  jade-1.3.4-1-x86_64.pkg.tar.zst
Repo Programs/fcgnu-calamares/: .BUILDINFO  .MTREE  .PKGINFO
Repo Programs/fcgnu-calamares-config-btrfs-zen/: .BUILDINFO  .MTREE  .PKGINFO  1-get-all-alci-gits-v1.sh
Repo Programs/fifthgnu-branding/: .BUILDINFO  .INSTALL  .MTREE  .PKGINFO
Repo Programs/fifthgnu-kernel/: .BUILDINFO  .MTREE  .PKGINFO
Repo Programs/ouroboros-gui-build/: README.md  build.sh  fifthgnu.ouroborosgui.json  fifthgnu.ouroborosgui.yml  meson.build  (+1 more)
Repo Programs/ouroboros-gui-build/ouroboros_gui/classes/: install_prefs.py  meson.build  ouroboros_screen.py
Repo Programs/ouroboros-gui-build/ouroboros_gui/utils/: meson.build
Repo Programs/ouroboros-gui-build/ouroboros_gui/widgets/: layout.py  locale.py  meson.build
x86_64/: ame-4.0.3-5-x86_64.pkg.tar.xz  fcgnu-calamares-config-btrfs-zen.pkg.tar.xz  fcgnu-calamares-config-btrfs.pkg.tar.xz  fcgnu-calmares.pkg.tar.xz  fifthgnu-branding.pkg.tar.xz  fifthgnu-calamares-config-zen.pkg.tar.xz  fifthgnu-calamares.pkg.tar.xz  fifthgnu-config.pkg.tar.xz  fifthgnu-installer.pkg.tar.xz  jade.pkg.tar.xz  jadegui.pkg.tar.xz  ouroboros-0.0.2-0.pkg.tar.xz  ouroboros-gui.pkg.tar.xz  ouroboros-gui0.0.1-1.pkg.tar.xz  ouroboros.pkg.tar.xz  thefifth_repo.db  thefifth_repo.db.tar.gz.old  thefifth_repo.files  thefifth_repo.files.tar.gz.old  unity-meta-1-3-any.pkg.tar.zst  update.sh
(+6476 files in other folders)
